# tauri_starter_pack

./: .editorconfig  .gitattributes  .gitignore  .prettierignore  AGENTS.md  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  prettier.config.js  tsconfig.json  vite.config.ts  vite.shared.ts  vitest.config.ts
.claude/: CLAUDE.md  settings.json
.claude/design/: init.md
.claude/design/example/: ex_init.md  ex_plan.md
.claude/reference/: README.md
docs/: architecture.md  coding-rules.md  tauri-commands.md  tauri-guide.md
docs/optional/: auth.md  backend-http.md  command-examples.md  desktop-ux.md  dialog-fs.md  events-channels.md  notification-deeplink.md  react-compiler.md  routing.md  server-state.md  sqlite.md  updater.md
scripts/: gen-source-icon.mjs
src/: globals.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/features/app/: commands.rs  config.rs  mod.rs  model.rs  service.rs
src-tauri/src/shared/: config.rs  mod.rs
src-tauri/src/shared/lib/: response.rs
src-tauri/src/shared/runtime/: lifecycle.rs
src-tauri/src/shared/store/: state.rs
src-tauri/src/shared/types/: ipc.rs
src/app/: App.tsx
src/app/providers/: Providers.tsx
src/features/app/: index.ts
src/features/app/api/: appApi.test.ts  appApi.ts  appParsers.ts
src/features/app/model/: usePing.ts
src/features/app/ui/: PingPanel.test.tsx  PingPanel.tsx
src/shared/types/: ipc.ts
src/test/mocks/: tauri.ts
(+1 files in other folders)
